<resources>
    <string name="app_name">DH-MercadoEsclavo</string>

    <string name="comprar">Comprar</string>
    <string name="favoritos">Agregar a favoritos</string>
    <string name="relacionados">Relacionados</string>
    <string name="ver_mas">Ver más</string>
    <string name="open_drawers" translatable="false">Open Drawer</string>
    <string name="close_drawers" translatable="false">Close Drawer</string>
    <string name="about_us">About us</string>


    <string name="nuestra_mision">Nuestra misión:</string>
    <string name="mision" translatable="false">En MercadoEsclavo creemos que, en los tiempos que corren, nuestros usuarios tienen derecho al uso de aplicaciones de celular sin enterarse que sus datos son usados para todo tipo de fines. Por eso trabajamos apasionadamente día a día para que la privacidad deje de ser algo valorado.
    </string>


    <string name="nuestra_vision">Nuestra visión:</string>
    <string name="vision" translatable="false">Somos lo que hacemos. Por eso en el futuro nos vemos como la compañía lider en venta de datos personales de usuarios dentro de toda Latinoamérica.

    </string>


    <string name="nuestros_valores">Nuestros valores:</string>
    <string name="valores" translatable="false">Desde MercadoEsclavo abogamos por los derechos de las empresas a manipular los datos personales de sus usuarios, confiamos en la credulidad de la gente al momento de aceptar términos y condiciones sin leer, pero por sobre todo, creemos que se puede lograr una sociedad más justa mediante la desaparición de la privacidad.
    </string>


    <string name="creador">Acerca del creador de la app:</string>
    <string name="creador_jiu" translatable="false">Diseño y desarrollo por Juan Ignacio Unzurrunzaga - github.com/juaniunzu - linkedin.com/in/juanunzu</string>
    <string name="articulos_a_la_venta">Artículos a la venta</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="visto_recientemente">Visto recientemente</string>
    <string name="ver_historial">Ver historial de búsqueda</string>
    <string name="recomendados">Recomendados</string>
    <string name="ofertas">Ofertas</string>
    <string name="en_construccion">En construcción</string>
    <string name="valor" translatable="false">$ %s</string>
    <string name="porque_visitaste">Porque visitaste %s</string>
    <string name="tus_favoritos">Tus favoritos</string>
    <string name="elegidos">Elegidos para vos</string>
    <string name="perfil">Mi perfil</string>
    <string name="ingresa">Ingresa a tu cuenta</string>
    <string name="ingresa_detalle">Para una mejor experiencia en la aplicación</string>
    <string name="ingresar">Ingresar</string>
    <string name="hola">Hola, que bueno verte de nuevo!</string>
    <string name="facebook_app_id" translatable="false">266468817997112</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb266468817997112</string>
    <string name="inicia_sesion">Inicia sesion y veras que tenemos para ofrecerte!</string>
    <string name="guarda_favoritos">Guarda tus articulos favoritos y veras que tenemos para ofrecerte!</string>
    <string name="inicio">Inicio</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="location">Ver ubicacion</string>
    <string name="email" translatable="false">Email</string>
    <string name="registrarse">Registrarse</string>
    <string name="contraseña">Contraseña</string>
    <string name="mis_favoritos">Mis favoritos</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="bienvenido_a_mercadoesclavo">Bienvenido a MercadoEsclavo!</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="bienvenido_de_nuevo">Bienvenido de nuevo!</string>
    <string name="filtra_por_precio">Filtrá por precio</string>
    <string name="entre">Entre</string>
    <string name="y">y</string>
    <string name="aplicar">Aplicar</string>


</resources>
