<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical"
        tools:context=".view.DetailFragment">

        <ImageView
            android:id="@+id/fragmentDetailImageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragmentDetailTextViewNombre"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="Nombre Articulo"
            app:layout_constraintTop_toBottomOf="@id/fragmentDetailImageView" />

        <TextView
            android:id="@+id/fragmentDetailTextViewPrecio"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="precio del articulo"
            android:textColor="#4CAF50"
            app:layout_constraintTop_toBottomOf="@id/fragmentDetailTextViewNombre" />

        <TextView
            android:id="@+id/fragmentDetailTextViewDescripcion"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="left"
            app:layout_constraintTop_toBottomOf="@id/fragmentDetailTextViewPrecio" />

        <Button
            android:id="@+id/fragmentDetailButtonComprar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/comprar"
            app:layout_constraintTop_toBottomOf="@id/fragmentDetailTextViewDescripcion" />

        <Button
            android:id="@+id/fragmentDetailButtonFavoritos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/favoritos"
            app:layout_constraintTop_toBottomOf="@id/fragmentDetailButtonComprar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/fragmentDetailCardViewRelacionados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/fragmentDetailButtonFavoritos">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/Headline5ConMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/relacionados" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragmentDetailRecyclerViewRelacionados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>

