<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical"
        tools:context=".view.DetailFragment"
        android:background="#fff">

        <ImageView
            android:id="@+id/fragmentDetailIndividualImageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragmentDetailIndividualTextViewNombre"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/fragmentDetailIndividualImageView" />

        <TextView
            android:id="@+id/fragmentDetailIndividualTextViewPrecio"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="#4CAF50"
            app:layout_constraintTop_toBottomOf="@id/fragmentDetailIndividualTextViewNombre" />

        <TextView
            android:id="@+id/fragmentDetailIndividualTextViewDescripcion"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="left"
            app:layout_constraintTop_toBottomOf="@id/fragmentDetailIndividualTextViewPrecio" />

        <Button
            android:id="@+id/fragmentDetailIndividualButtonComprar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/comprar"
            app:layout_constraintTop_toBottomOf="@id/fragmentDetailIndividualTextViewDescripcion" />

        <Button
            android:id="@+id/fragmentDetailIndividualButtonFavoritos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/favoritos"
            app:layout_constraintTop_toBottomOf="@id/fragmentDetailIndividualButtonComprar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/fragmentDetailIndividualCardViewRelacionados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/fragmentDetailIndividualButtonFavoritos">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/Headline5ConMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/relacionados" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragmentDetailIndividualRecyclerViewRelacionados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>