<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginFragment">

    <View
        android:layout_width="0dp"
        android:layout_height="420dp"
        android:background="#31000000"
        app:layout_constraintBottom_toBottomOf="@id/fragmentLogin_ButtonIniciarSesion"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical2"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        app:layout_constraintTop_toTopOf="@id/fragmentLoginTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragmentLoginGuideline25"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragmentLoginGuideline75"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <ImageView
        android:id="@+id/fragmentLoginImageViewLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_person_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/fragmentLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bienvenido_de_nuevo"
        android:textColor="#fff"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentLoginImageViewLogo" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/fragmentLogin_BotonLoginDeGoogle"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/fragmentLoginGuideline25"
        app:layout_constraintStart_toStartOf="@id/fragmentLoginGuideline25"
        app:layout_constraintTop_toBottomOf="@id/fragmentLoginTextView" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fragmentLogin_loginbuttonFacebook"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="@id/fragmentLoginGuideline75"
        app:layout_constraintStart_toStartOf="@id/fragmentLoginGuideline75"
        app:layout_constraintTop_toBottomOf="@id/fragmentLoginTextView" />

    <TextView
        android:id="@+id/fragmentLogin_textViewO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="O"
        android:textColor="#000"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentLogin_BotonLoginDeGoogle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragmentLogin_TextInputLayoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentLogin_textViewO"
        app:startIconDrawable="@drawable/ic_person_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentLogin_TextInputEditTextUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:textColorHint="#000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragmentLogin_TextInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentLogin_TextInputLayoutUsername"
        app:startIconDrawable="@drawable/ic_lock_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentLogin_TextInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/contraseña"
            android:textColorHint="#000" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fragmentLogin_ButtonIniciarSesion"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:elevation="5dp"
        android:text="@string/iniciar_sesion"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentLogin_TextInputLayoutPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>